--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.4",
+    "resend": "^6.6.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
