--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,9 @@ NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY=pk_live_your_live_public_key
 # Get from: https://dashboard.paystack.com/#/settings/developer (after adding webhook URL)
 PAYSTACK_WEBHOOK_SECRET=your_webhook_secret
 
+# Resend API Configuration
+# Get from: https://resend.com/api-keys
+RESEND_API_KEY=re_your_resend_api_key
+
 # Git Bash Path (Windows only - for Claude Code)
 CLAUDE_CODE_GIT_BASH_PATH=C:\Program Files\Git\bin\bash.exe
